welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: ';' expected but 'else' found.
    else if (!estFaceMur){avance()}
    ^