welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var color:Boolean
    avance()
    else if (!estFaceMur){avance()}
    if (getCoulerSol()==Color.green){avance}
    
    
    
    
    
    
    // Write your code here
}        
